# Ordo

./: .gitignore  PINBOARD.md  PINBOARD_CHEATSHEET.md  PINBOARD_IMPLEMENTATION.md  PINBOARD_QUICKREF.md  PINBOARD_TESTING.md  README.md  app.py  pyproject.toml
agent/: agent_loop.py  intent_parser.py
config/: config_backup.py  exclusions.json  exclusions.py  settings.json  settings.py
data/: index.db  view_db.py
indexer/: build_faiss.py  content_pipeline.py  embedder.py  file_types.py  index_db.py  run_indexer.py  scanner.py
scripts/: scan_path.py
src/ordo/: app.py
src/ordo/agent/: agent_loop.py  intent_parser.py  planner.py
src/ordo/indexer/: build_faiss.py  content_pipeline.py  file_types.py  index_db.py  metadata_extractor.py  run_indexer.py  scanner.py  text_extractor.py  vector_index.py
src/ordo/models/: llm.py
src/ordo/safety/: confirmations.py  path_guard.py
src/ordo/tools/: file_tools.py  hybrid_search.py  organize_tools.py  pinFile.py  pinboard.py  pinboard_backup.py  pinboard_ui.py  search_file.py  semantic_search.py  time_search.py
src/ordo/utils/: detect_drivers.py  notification.py
tools/: hybrid_search.py  organize_tools.py
