[project]
name = "ordo"
version = "0.1.0"
description = "An Offline AI powered file manager"
authors = [
    {name = "AniketkumarXShingeki",email = "aniketkumar89012@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "typer[all] (>=0.24.1,<0.25.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "ollama (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ordo = "ordo.app:main"
